# serializer version: 1
# name: test_linedot_normal_crossing[10-LinePlusDot-SGLD]
  list([
    8.628656473774754e-07,
    125492.046875,
  ])
# ---
# name: test_linedot_normal_crossing[10-LinePlusDot-sgld]
  list([
    8.628656473774754e-07,
    125492.046875,
  ])
# ---
# name: test_linedot_normal_crossing[10-Polynomial-SGLD]
  list([
    0.0,
    -5.7380566431675106e-05,
  ])
# ---
# name: test_linedot_normal_crossing[10-Polynomial-sgld]
  list([
    0.0,
    -5.7380566431675106e-05,
  ])
# ---
# name: test_linedot_normal_crossing[2-LinePlusDot-SGLD]
  list([
    2.804313453452778e-06,
    0.05154026299715042,
  ])
# ---
# name: test_linedot_normal_crossing[2-LinePlusDot-sgld]
  list([
    2.804313453452778e-06,
    0.05154026299715042,
  ])
# ---
# name: test_linedot_normal_crossing[2-Polynomial-SGLD]
  list([
    0.0,
    -0.0008089365437626839,
  ])
# ---
# name: test_linedot_normal_crossing[2-Polynomial-sgld]
  list([
    0.0,
    -0.0008089365437626839,
  ])
# ---
